[gd_scene load_steps=62 format=3 uid="uid://i8tqpr2q1kd7"]

[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_2had2"]
[ext_resource type="Texture2D" uid="uid://bqqcli27888xe" path="res://assets/animations/Basic Charakter Actions.png" id="2_eckuu"]
[ext_resource type="Texture2D" uid="uid://b7ilnep6nax6l" path="res://assets/animations/Basic Charakter Spritesheet.png" id="3_478s6"]
[ext_resource type="Script" path="res://scripts/states/node_state_machine.gd" id="4_4vl3r"]
[ext_resource type="Script" path="res://scripts/states/walk_state.gd" id="5_1ffu1"]
[ext_resource type="Script" path="res://scripts/states/idle_state.gd" id="5_5farf"]
[ext_resource type="Script" path="res://scripts/states/chopping_state.gd" id="7_jrs2f"]
[ext_resource type="Script" path="res://scripts/states/tilling_state.gd" id="8_ju2vb"]
[ext_resource type="Script" path="res://scripts/states/watering_state.gd" id="9_nmho8"]
[ext_resource type="PackedScene" uid="uid://2xpqnivarkg6" path="res://scenes/components/hit_component.tscn" id="10_k4mmy"]
[ext_resource type="Texture2D" uid="uid://bw7hfvqmww45y" path="res://assets/art/basic_ui_sprites.png" id="11_hf5n6"]
[ext_resource type="PackedScene" uid="uid://ceiunirt4htmx" path="res://scenes/Ui/day_night_panel.tscn" id="12_jeoma"]
[ext_resource type="PackedScene" uid="uid://d0jkbxjehcft7" path="res://scenes/Ui/tool_panel.tscn" id="13_o63qw"]
[ext_resource type="PackedScene" uid="uid://cgdvbroy6c7s7" path="res://scenes/Ui/inventory_panel.tscn" id="14_006m4"]
[ext_resource type="PackedScene" uid="uid://3hiihdd0rh6v" path="res://scenes/Ui/energy_bar.tscn" id="15_d5i88"]
[ext_resource type="PackedScene" path="res://scenes/Ui/energy_bar_ui.tscn" id="16_olscj"]
[ext_resource type="FontFile" uid="uid://d0oqjc5qjfs63" path="res://assets/art/pixelFont-7-8x14-sproutLands.ttf" id="17_kklbm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_np34i"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo3ck"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo6js"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnjbp"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8scs"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xknx1"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbfjg"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljeqh"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_77nn7"]
atlas = ExtResource("3_478s6")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyidi"]
atlas = ExtResource("3_478s6")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t342"]
atlas = ExtResource("3_478s6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlse7"]
atlas = ExtResource("3_478s6")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf6qo"]
atlas = ExtResource("3_478s6")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt2gw"]
atlas = ExtResource("3_478s6")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7qje"]
atlas = ExtResource("3_478s6")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkg26"]
atlas = ExtResource("3_478s6")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_whukw"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_naac8"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_inrt6"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bbvo"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4fdx"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vu6m"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxqk1"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iebbk"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eod1w"]
atlas = ExtResource("3_478s6")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6atl1"]
atlas = ExtResource("3_478s6")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rchuq"]
atlas = ExtResource("3_478s6")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fht4l"]
atlas = ExtResource("3_478s6")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0fy4"]
atlas = ExtResource("3_478s6")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_621ti"]
atlas = ExtResource("3_478s6")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbgnh"]
atlas = ExtResource("3_478s6")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_45hq7"]
atlas = ExtResource("3_478s6")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2xa1"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu60w"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7kde"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6tgj"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8jhj"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rldy"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 480, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_72u1k"]
atlas = ExtResource("2_eckuu")
region = Rect2(0, 528, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t17sk"]
atlas = ExtResource("2_eckuu")
region = Rect2(48, 528, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_kx6lq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_np34i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo3ck")
}],
"loop": false,
"name": &"chopping_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo6js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnjbp")
}],
"loop": false,
"name": &"chopping_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8scs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xknx1")
}],
"loop": false,
"name": &"chopping_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbfjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljeqh")
}],
"loop": false,
"name": &"chopping_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_77nn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyidi")
}],
"loop": true,
"name": &"idle_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t342")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlse7")
}],
"loop": true,
"name": &"idle_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf6qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt2gw")
}],
"loop": true,
"name": &"idle_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7qje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkg26")
}],
"loop": true,
"name": &"idle_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_whukw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naac8")
}],
"loop": false,
"name": &"tilling_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_inrt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bbvo")
}],
"loop": false,
"name": &"tilling_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4fdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vu6m")
}],
"loop": false,
"name": &"tilling_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxqk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iebbk")
}],
"loop": false,
"name": &"tilling_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eod1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6atl1")
}],
"loop": true,
"name": &"walk_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rchuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fht4l")
}],
"loop": true,
"name": &"walk_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0fy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_621ti")
}],
"loop": true,
"name": &"walk_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbgnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45hq7")
}],
"loop": true,
"name": &"walk_right",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2xa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu60w")
}],
"loop": false,
"name": &"watering_back",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7kde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6tgj")
}],
"loop": false,
"name": &"watering_front",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8jhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rldy")
}],
"loop": false,
"name": &"watering_left",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_72u1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t17sk")
}],
"loop": false,
"name": &"watering_right",
"speed": 3.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g0eoi"]
radius = 6.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgc0h"]
size = Vector2(9.8524, 22.8282)

[sub_resource type="AtlasTexture" id="AtlasTexture_vehu7"]
atlas = ExtResource("11_hf5n6")
region = Rect2(148, 148, 24, 25)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
y_sort_enabled = true
position = Vector2(1, -40)
collision_layer = 2
script = ExtResource("1_2had2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 15.5)
scale = Vector2(1.30502, 1.19948)
sprite_frames = SubResource("SpriteFrames_kx6lq")
animation = &"tilling_back"
autoplay = "idle_left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 17)
shape = SubResource("CapsuleShape2D_g0eoi")

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("4_4vl3r")
initial_node_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State_Machine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("5_5farf")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Walk" type="Node" parent="State_Machine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("5_1ffu1")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Chopping" type="Node" parent="State_Machine" node_paths=PackedStringArray("player", "animated_sprite_2d", "hit_component_collision_shape")]
script = ExtResource("7_jrs2f")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")

[node name="Tilling" type="Node" parent="State_Machine" node_paths=PackedStringArray("player", "animated_sprite_2d")]
script = ExtResource("8_ju2vb")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="Watering" type="Node" parent="State_Machine" node_paths=PackedStringArray("player", "animated_sprite_2d", "hit_component_collision_shape")]
script = ExtResource("9_nmho8")
player = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
hit_component_collision_shape = NodePath("../../HitComponent/HitComponentCollisionShape2D")

[node name="HitComponent" parent="." instance=ExtResource("10_k4mmy")]
position = Vector2(1, 0)

[node name="HitComponentCollisionShape2D" type="CollisionShape2D" parent="HitComponent"]
position = Vector2(2, 20)
scale = Vector2(1.62397, 1.05133)
shape = SubResource("RectangleShape2D_bgc0h")
debug_color = Color(0.928454, 3.25364e-05, 0.664601, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="HitComponent/HitComponentCollisionShape2D"]
position = Vector2(-0.307887, 0.41614)
scale = Vector2(0.384859, 0.651556)
texture = SubResource("AtlasTexture_vehu7")

[node name="day_night_panel" parent="." instance=ExtResource("12_jeoma")]
z_index = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 224.0
offset_top = -168.0
offset_right = 224.0
offset_bottom = -168.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)

[node name="InventoryPanel" parent="." instance=ExtResource("14_006m4")]
visible = false
z_index = 1
offset_left = -161.0
offset_top = -16.0
offset_right = 157.0
offset_bottom = 38.0

[node name="EnergyBar" parent="." instance=ExtResource("15_d5i88")]
z_index = 1
offset_left = -267.0
offset_top = -153.0
offset_right = 12.0
offset_bottom = -137.0
max_value = 10.0
value = 10.0

[node name="Control" parent="." instance=ExtResource("16_olscj")]
z_index = 1
offset_left = -310.0
offset_top = -168.0
offset_right = -310.0
offset_bottom = -168.0

[node name="tool_panel" parent="." instance=ExtResource("13_o63qw")]
z_index = 1
offset_left = -174.0
offset_top = 108.0
offset_right = 174.0
offset_bottom = 156.0

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -62.0
offset_top = -58.0
offset_right = 62.0
offset_bottom = -35.0
theme_override_fonts/font = ExtResource("17_kklbm")
theme_override_font_sizes/font_size = 27
text = "You Died"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
